// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Template Specialization/ObjectDescription Duplicate Fields 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Evans
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Anderson
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    68
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2019-11-07T23:13:44.334Z"}
      title="2019-11-07T23:13:44+00:00"
    >
      November 7, 2019
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Seconds since signup
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    36290775666
  </dd>
</dl>
`;

exports[`Storyshots Template Specialization/ObjectDescription Nested Data 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name First
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Wilma
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Name Last
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Shields
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-03-29T03:00:39.328Z"}
      title="2020-03-29T03:00:39+00:00"
    >
      March 29, 2020
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    65
  </dd>
</dl>
`;

exports[`Storyshots Template Specialization/ObjectDescription Object Description 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Jeremy
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Ratke
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    35
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-12-01T16:27:18.693Z"}
      title="2020-12-01T16:27:18+00:00"
    >
      December 1, 2020
    </time>
  </dd>
</dl>
`;

exports[`Storyshots Template Specialization/ObjectDescription Out Of Order 1`] = `
<dl
  className="description-list"
>
  <dt
    className="description-list__term description-list__term--single"
  >
    Last Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Denesik
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    First Name
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    Addison
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Sign Up Date
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-08-26T16:12:49.760Z"}
      title="2020-08-26T16:12:49+00:00"
    >
      August 26, 2020
    </time>
  </dd>
  <dt
    className="description-list__term description-list__term--single"
  >
    Age
  </dt>
  <dd
    className="description-list__description description-list__description--single"
  >
    90
  </dd>
</dl>
`;
